Update About Me content

--- a/index.html
+++ b/index.html
@@ -69,11 +69,24 @@
         <div class="content">
           <p>Hi 👋 I'm a software engineer specializing in modern JavaScript
 						frameworks and technologies.</p>
-          <p>My background in logistics and marketing honed my ability to juggle
-						time-sensitive tasks and understand customer needs. I’m interested
-						in combining these skills with web technologies to create a seamless
-						experience for users by contributing clean, scalable, well-tested
-						code.</p>
+					<p>I spent most of my working years searching for the skill I could
+						excel at and devote my life to.</p>
+					<p>In 2017, I came across a tutorial on how to build a website with
+						HTML and CSS. After discovering JavaScript, I spent many late nights
+						building side projects and reading. In April 2019, I committed
+						myself to becoming a software engineer by enrolling in Lambda
+						School, and graduted in August 2020.</p>
+					<p>Diving into marketing and logistics roles with no experience
+						honed my ability to learn new skills under pressure. When learning
+						a new skill, I seek out the foundational building blocks of the
+						field, with the aim of mastery. Managers and peers have told me
+						they respect my work ethic as well as my ability to communicate
+						and collaborate.</p>
+					<p>I’m interested in combining these skills with web technologies to
+						create a seamless experience for users — by contributing clean,
+						scalable, well-tested code.</p>
+					<p>In my free time, I enjoy weightlifting, boxing, and
+						writing.</p>
         </div>
       </section>
 
