--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <p>Hi 👋 I'm a software engineer specializing in modern JavaScript
 						frameworks and technologies.</p>
 					<p>I spent most of my working years searching for the skill I could
-						excel at and devote my life to.</p>
+						excel at and devote myself to.</p>
 					<p>In 2017, I came across a tutorial on how to build a website with
 						HTML and CSS. After discovering JavaScript, I spent many late nights
 						building side projects and reading. In April 2019, I committed
